ci: fix telegram module not install
Signed-off-by: Tools-app <localhost.hutao@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,11 +138,11 @@ jobs:
           path: artifacts
       - name: Package Artifacts
         run: |
-          cd ${{ github.workspace }}/artifacts/fas-rs-next(release)
+          cd "${{ github.workspace }}/artifacts/fas-rs-next(release)"
           zip -9 -rq "../../fas-rs-next(release).zip" .
-          cd ${{ github.workspace }}/artifacts/fas-rs-next-extension(release)
+          cd "${{ github.workspace }}/artifacts/fas-rs-next-extension(release)"
           zip -9 -rq "../../fas-rs-next-extension(release).zip" .
-          cd ../..
+          cd "${{ github.workspace }}"
       - name: Upload
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
