--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,7 +39,7 @@ libc = "0.2.176"
 toml = "0.9.7"
 serde = { version = "1.0.228", features = ["derive"] }
 sys-mount = { version = "3.0.1", default-features = false }
-quick-xml = { version = "0.38.3", features = ["serialize"] }
+quick-xml = { version = "0.38.3", features = ["serialize"], optional = true }
 mlua = { version = "0.11.3", features = ["luajit", "vendored", "error-send"], optional = true }
 frame-analyzer = "0.3.3"
 dumpsys-rs = { git = "https://github.com/shadow3aaa/dumpsys-rs" }
@@ -51,6 +51,7 @@ chrono = "0.4.42"
 
 [features]
 extension = ["mlua"]
+scene = ["quick-xml"]
 
 [build-dependencies]
 anyhow = "1.0.100"
