--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -123,6 +123,8 @@ jobs:
           export ANDROID_NDK_ROOT=$ANDROID_NDK_HOME
           cargo ndk -t arm64-v8a b -r --package daemon
           cp ./target/aarch64-linux-android/release/daemon  ./module/
+          cp ./modules/cpufreq_clamping.zip ./module
+          echo "magisk --install-module \"$MODPATH\"/cpufreq_clamping.zip" >> ./module/customize.sh
           cargo xtask --extension build -r -v
           mv "output/fas-rs-next(release).zip" "output/fas-rs-next-extension(release).zip"
       - name: Cleanup
