ci: use ndk verison is r29-beta2
Signed-off-by: Tools-app <localhost.hutao@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Setup ndk
         if: steps.cache-ndk.outputs.cache-hit != 'true'
         run: |
-          ndk_url=$(wget -qO- https://github.com/android/ndk/releases/latest | grep -e 'https://dl.google.com/android/repository/android-ndk-.*-linux.zip' | sed -n 's/.*<a href="\([^"]*\)".*/\1/p')
+          ndk_url="https://dl.google.com/android/repository/android-ndk-r29-beta2-linux.zip"
           wget -O ndk.zip $ndk_url -nv
           mkdir -p ~/ndk_temp
           unzip ndk.zip -d ~/ndk_temp 2>&1 > /dev/null
@@ -91,7 +91,7 @@ jobs:
       - name: Setup ndk
         if: steps.cache-ndk.outputs.cache-hit != 'true'
         run: |
-          ndk_url=$(wget -qO- https://github.com/android/ndk/releases/latest | grep -e 'https://dl.google.com/android/repository/android-ndk-.*-linux.zip' | sed -n 's/.*<a href="\([^"]*\)".*/\1/p')
+          ndk_url="https://dl.google.com/android/repository/android-ndk-r29-beta2-linux.zip"
           wget -O ndk.zip $ndk_url -nv
           mkdir -p ~/ndk_temp
           unzip ndk.zip -d ~/ndk_temp 2>&1 > /dev/null
