--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,3 +21,8 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
+  - package-ecosystem: "cargo" # See documentation for possible values
+    directory: "/daemon" # Location of package manifests
+    schedule:
+      interval: "weekly"
+      
