Revert "feat: add zygisk workspaces"
This reverts commit b3dd62673160be02e8751c71f66b6a46e12ac2f5 && 732e2c94a021fcd8de6e4fa4f027b51b6416170b && a9019ada092f5993048a4c75cc4a265c6fd41d52 && c75ae78c9928828518ab690d529156e861683352 && ab21097c7b023fcaef7dbd5a5d4662198a120b46 .

Signed-off-by: Tools-app <localhost.hutao@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@
 # with fas-rs. If not, see <https://www.gnu.org/licenses/>.
 
 [workspace]
-members = [ "workspaces/daemon","workspaces/xtask", "workspaces/zygisk-frame-analyzer"]
+members = [ "daemon","xtask"]
 
 [package]
 name = "fas-rs-next"
@@ -48,7 +48,6 @@ num_cpus = "1.17.0"
 nix = { version = "0.30.1", features = ["sched"] }
 env_logger = "0.11.8"
 chrono = "0.4.42"
-zygisk-frame-analyzer = { version = "0.1.0", path = "workspaces/zygisk-frame-analyzer" }
 
 [features]
 extension = ["mlua"]
