--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,7 +22,7 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: "cargo" # See documentation for possible values
-    directory: "/workspaces/daemon" # Location of package manifests
+    directory: "/daemon" # Location of package manifests
     schedule:
       interval: "weekly"
       
