--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,4 +157,4 @@ jobs:
           ANOTHER: ${{ github.event.head_commit.author.name }}
         run: |
           pip3 install telethon
-          python3 .github/bot.py
+          python3 .github/bot.py "./fas-rs-next(release).zip" "./fas-rs-next-extension(release).zip"
