--- a/cliff.toml
+++ b/cliff.toml
@@ -46,7 +46,7 @@ footer = """
 # Remote repository configuration
 [remote.github]
 owner = "Tools-cx-app"
-repo = "meta-magic_mount"
+repo = "fas-rs-next"
 
 [git]
 # Parse commits according to the conventional commits specification.
