feat: moved built-in exclude_list to config
this is commit is breaking changes

--- a/module/games.toml
+++ b/module/games.toml
@@ -1,4 +1,5 @@
 logger_level = "info"
+exclude_list = ["com.tungsten.fcl", "net.kdt.pojavlaunch", "com.tungsten.hmclpe"]
 
 [config]
 keep_std = true
