--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,14 +21,10 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
-    groups:
-      crates:
-        patterns:
-          - "*"
-  - package-ecosystem: "cargo" # See documentation for possible values
-    directory: "/daemon" # Location of package manifests
-    schedule:
-      interval: "weekly"
+    ignore:
+      - dependency-name: "dumpsys-rs"
+    allow:
+      - dependency-type: "all"
     groups:
       crates:
         patterns:
